@startuml
' Aggregate: Shipments
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
hide empty members

enum LogisticsSubType #FEF9E7 {
  // 超商
    UNIMART
  // 7-11
    FAMI
  // 全家
    HILIFE
  // 萊爾富
    // 宅配
    TCAT
  // 黑貓宅急便
    POST      // 中華郵政
}

class HomeShipment <<AggregateRoot>> #D4E6F1 {
  +Receiver: ReceiverInfo
  +ZipCode: string
  +Address: string
  +BookingNote: string?
}

class CVSShipment <<AggregateRoot>> #D4E6F1 {
  +Receiver: ReceiverInfo
  +StoreId: string
  +StoreName: string
  +CVSPaymentNo: string?
  ..
  +UpdateCVSPaymentNo()
}

abstract class Shipment <<abstract>> #EBF5FB {
  +OrderId: Guid
  +LogisticsId: string
  +LogisticsSubType: LogisticsSubType
  +LogisticsStatus: string
  +LogisticsStatusName: string
  +UpdateStatusDate: DateTime
  +CreatedAt: DateTime
  ..
  +AssignRealLogisticsId()
  +UpdateStatus()
  +MarkAsCompleted()
}

class ShipmentCompletedEvent <<DomainEvent>> #FDEDEC {
  +ShipmentId: Guid
  +OrderId: Guid
}

' --- Inheritance ---
HomeShipment --|> Shipment
CVSShipment --|> Shipment
Shipment --|> AggregateRoot

' --- Composition ---
HomeShipment --> ReceiverInfo
CVSShipment --> ReceiverInfo
Shipment --> LogisticsSubType

' --- Domain Events ---
Shipment ..> ShipmentCompletedEvent : raises

@enduml